Corrección de unos pequeños errores